fix: scrollbars hidden

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -138,3 +138,15 @@ table {
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+/* Chrome, Safari, Edge */
+*::-webkit-scrollbar {
+  display: none;
+}
+
+/* Firefox */
+* {
+  scrollbar-width: none;
+  -ms-overflow-style: none; /* IE 10+ */
+}
